--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "admins",
-  "version": "1.0.0",
+  "name": "blockotus-organ-admins",
+  "version": "0.1.3-beta",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,12 @@
     "create": "node enrollAdmin.js",
     "add": "node registerUser.js"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/blockotus/admins.git"
+  },
+  "author": "Daniel Febrero",
+  "license": "AGPL-3.0",
   "dependencies": {
     "fabric-ca-client": "^2.2.0",
     "fabric-network": "^2.2.0"
