--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "create": "node enrollAdmin.js",
-    "add": "node registerUser.js"
+    "add": "node registerUser.js",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,14 @@
   "dependencies": {
     "fabric-ca-client": "^2.2.0",
     "fabric-network": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.9.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "husky": "^4.3.0"
+  },
+  "hooks": {
+    "pre-push": "yarn run lint"
   }
 }
