--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockotus-organ-admins",
-  "version": "0.2.3-alpha",
-  "description": "",
+  "version": "0.2.4-alpha",
+  "description": "Tools for BLOCKOTUS Organism. Network Open Standard.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,8 +18,8 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "core-js": "^3.7.0",
-    "fabric-ca-client": "^2.2.0",
-    "fabric-network": "^2.2.0"
+    "fabric-ca-client": "^2.2.5",
+    "fabric-network": "^2.2.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
