--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "eslint-plugin-flowtype": "^5.2.0",
     "husky": "^4.3.0"
   },
+  "resolutions": {
+    "ini": "^1.3.6"
+  },
   "hooks": {
     "pre-push": "yarn run lint"
   }
